# apis-instance-demo

./: .gitignore  README.md  pyproject.toml
apis_ontology/: models.py  urls.py  views.py
apis_ontology/management/commands/: link_related_persons.py  populate_demo_data.py
apis_ontology/migrations/: 0001_initial.py  0002_alter_group_options_alter_isamemberof_options_and_more.py  0003_alter_place_feature_code_and_more.py  0004_person_alternative_names_place_alternative_labels_and_more.py
apis_ontology/settings/: settings.py
apis_ontology/templates/: base.html
apis_ontology/templates/apis_ontology/partials/: altlabels_table_row.html  person_alternative_names_table_row.html
