[project]
name = "apis-instance-demo"
version = "0.1.0"
description = "Demo APIS Instance"
authors = [{ name = "Saranya Balasubramanian" }]
license = "MIT"
readme = "README.md"
requires-python = ">3.11"
packages = [{include = "apis_ontology"}]
dependencies = [
    "apis-core-rdf==0.51.1",
    "apis-acdhch-default-settings==2.13.0",
    "psycopg>=3.2.9",
    "psycopg2>=2.9.10",
    "faker>=37.5.3",
    "django-cosmograph==0.3.10",
]

[tool.hatch.build.targets.wheel]
packages = ["apis_ontology"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
