[project]
name = "apis-instance-demo"
version = "0.1.0"
description = "Demo APIS Instance"
authors = [{ name = "Saranya Balasubramanian" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
packages = [{include = "apis_ontology"}]
dependencies = [
    "apis-core-rdf==0.59.0",
    "apis-acdhch-default-settings==2.17.0",
    "psycopg[binary]>=3.2",
    "faker>=37.5.3",
    "django-cosmograph==0.3.11",
]

[tool.hatch.build.targets.wheel]
packages = ["apis_ontology"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
